trying to fix button spacing

--- a/styles.css
+++ b/styles.css
@@ -114,29 +114,17 @@ nav ul li a:hover {
   transform: scale(1.1);
 }
 
-.cta-button-cal {
-  /* display: inline;
-  color: #fff; */
-  /* border: none; */
-  background:none;
-  border:none;
-  margin:0;
-  padding:0;
-  font-size: 35px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
 #my-button {
   /* background-color: #FFBC52; */
+  display: inline-block;
   background-color: transparent !important;
   width: 150px;
   height: 150px;
   /* padding: 20px; */
-  margin-top: 40px;
+  margin-top: 30px;
   margin-bottom: 20px;
   border: none;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   cursor: pointer;
   transition: transform 0.3s;
   color: #FFFFFF; /* set font color to white */
@@ -148,19 +136,6 @@ nav ul li a:hover {
   /* background-color: #D1392A; */
   transform: scale(1.1);
   /* color: #FFFFFF; */
-}
-
-.cta-button-cal:hover {
-  /* color: #555; */
-  transform: scale(1.1);
-}
-
-.cta-large-text {
-  font-size: 24px;
-}
-
-.cta-small-text {
-  font-size: 18px;
 }
 
 .services-list {
